[package]
name = "path_finding"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = ["wayland", "dynamic_linking"] }
bevy_ecs_tilemap = "0.15.0"
bevy_egui = { git = "https://github.com/vladbat00/bevy_egui.git", version = "0.33.0" }
maze_generator = "2.0.0"
rand = "0.9.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
