[package]
name = "path_finding"
version = "1.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.0", features = ["wayland"] }
bevy_ecs_tilemap = "0.17.0"
bevy_egui = { version = "0.38.0" }
maze_generator = "2.0.0"
noise = "0.9.0"
rand = "0.9.0"

[features]
default = ["development"]
development = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
